# t1d-cgm-anchored-virtual-cohort

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: analysis.yaml
data/: README.md
data/derived/: virtual_profile_summary.csv
data/raw/real_cgm/: README.md
data/raw/virtual_traces/: README.md
docs/: INPUT_SCHEMA.md
outputs/: results_summary.json
outputs/tables/: aggregate_equivalence.csv  diurnal_distribution_summary.csv  diurnal_equivalence.csv  diurnal_threshold_sensitivity.csv  external_diurnal_validation.csv  external_validation_qc_sensitivity.csv  external_whole_day_validation.csv  feature_ablation.csv  scenario_utilization.csv  table_aggregate_equivalence.tex  table_cohort.tex  table_diurnal_equivalence.tex  table_equivalence_margins.tex  temporal_matching_metadata.json  temporal_matching_model_selection.csv  temporal_matching_validation.csv
scripts/: evaluate_temporal_matching.py  package_virtual_traces.py  run_demo.sh  run_external_validation.py  run_full_analysis.sh  secret_scan.py
src/t1d_virtual_cohort/: __init__.py  cli.py  demo.py  diurnal.py  io.py  matching.py  metrics.py  pipeline.py  plotting.py  statistics.py
tests/: test_core.py
