[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t1d-virtual-cohort"
version = "0.1.0"
description = "Reproducible construction and validation of a CGM-anchored virtual cohort for type 1 diabetes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ameen Banjar"}]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]

[project.scripts]
t1d-virtual-cohort = "t1d_virtual_cohort.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

